# bedrock-translation-agent

./: .gitignore  README.md  pyproject.toml
examples/: scripts.py
src/bedrock_translation_agent/libs/: bedrock.py  bedrock_model.py  multi_chunk_translation.py  one_chunk_translation.py  translation.py  utils.py
