[tool.poetry]
name = "bedrock-translation-agent"
version = "0.1.0"
description = ""
authors = ["xjiaqing <ballieasor@outlook.com>"]
readme = "README.md"
packages = [{include = "bedrock_translation_agent", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.127"
tiktoken = "^0.7.0"
icecream = "^2.1.3"
langchain-text-splitters = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
